# pythonprac-2021

./: README.md  checkerNN.py  create_today.sh  paste_urls.py  run_tests.sh
20210916/1/: task.py  task1.py
20210916/2/: task2.py
20210916/3/: gentest.py
20210923/1/: URLS  task.py
20210923/2/: URLS  task.py
20210923/3/: URLS  task.py
20210930/1/: URLS  task.py
20210930/2/: URLS  task.py
20210930/3/: URLS  task.py
20211007/1/: URLS  task.py
20211007/2/: URLS  task.py
20211007/3/: URLS  task.py
20211007/4/: URLS  task.py
20211014/1/: URLS  task.py
20211014/2/: task.py
20211014/3/: URLS  task.py
20211021/1/: URLS  task.py
20211021/2/: URLS  task.py
20211021/3/: URLS  task.py
20211028/1/: URLS  task.py
20211028/2/: URLS  task.py
20211028/3/: URLS  task.py
20211111/1/: URLS  task.py
20211111/2/: URLS  task.py
20211118/1/: URLS  task.py
20211118/2/: URLS  task.py
20211118/3/: URLS  task.py
20211125/1/: URLS  task.py
20211125/2/: URLS  run_tests.sh  task.py
20211125/3/: URLS  task.py
20211202/1/: URLS  task.py
20211202/2/: URLS  task.py
20211213/1/: URLS  task.py
20211213/2/: URLS  task.py
20220214/1/: README.md  git_dir.py  git_parser.py
20220221/1/: fipsedixit.py
20220221/2/: jabber.txt
20220228/1/: task.py
20220305/1/: task.py
20220321/1/: reply.txt  request.txt
20220321/2/: reply.txt  request.txt
20220328/mud/: __main__.py  gameCmd.py
20220404/1/: conf.py  index.rst
20220425/1/: .doit.db  dodo.py  pyproject.toml  setup.cfg  task.py  test_task.py
20220425/1/task/ru/LC_MESSAGES/: task.po
(+120 files in other folders)
