[metadata]
name = task
version = 1.0.0
url = https://www.github.com/Veniamin-Arefev/pythonprac-2021
author = Veniamin-Arefev
author_email = secter@gmail.com
description = task package
long_description = file: missing.rst
project_urls =
    Bug Tracker = https://www.github.com/Veniamin-Arefev/pythonprac-2021/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = task
include_package_data = True
install_requires =
   pyfiglet==0.8.post1

[options.entry_points]
console_scripts =
    task = task

[options.package_data]
prog = */*/task.mo